# Pruebas_Tauri

./: .gitmodules  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: comparador.css  comparador.ts  grafico.ts  inditex.ts  main.ts  paleta.ts  root.css  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errores.rs  imagenes.rs  main.rs  propiedades.rs  utils.rs
src/assets/: iconos.ts
src/components/: cuadro-tipos.css  cuadro-tipos.ts  header-busqueda.css  header-busqueda.ts
src/errors/: ErrorVentana.ts
src/interfaces/: IPokeApi.ts  tipos.ts
view/: comparador.html  config.toml  grafico.html  paleta.html  sprites.html
