[package]
name = "pruebas-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "dialog-message",
    "window-close",
    "dialog-confirm",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = { version = "0.4" }
image = "0.25"
rand = { version = "0.8.5" }
linfa = { version = "0.7.0" }
linfa-clustering = { version = "0.7.0" }
ndarray = { version = "0.15.6" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
